--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
