--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "serve": "nodemon -e ts --exec \"ts-node app.ts\""
+    "serve": "nodemon -e ts --exec \"ts-node app.ts\"",
+    "gen-doc": "typedoc --entryPointStrategy expand",
+    "gen-doc-swagger": "ts-node ./src/config/swagger.config.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
@@ -24,6 +28,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "typedoc": "^0.25.13"
   }
 }
