--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "js-sha3": "^0.9.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
